补充分类特征与高基数特征说明
在文档中新增了 categorical 与 features 区别的详细解释，并补充了高基数特征的定义、选择建议及实际配置示例，帮助理解特征工程配置原则。

--- a/record/20250820record.md
+++ b/record/20250820record.md
@@ -129,3 +129,65 @@ fit:
 - 保留核心特征：功能、类型、位置、材料、工艺、状态等
 
 运行前确保 data/instrument.csv 文件存在且包含所有指定的特征列。
+
+---
+
+分类特征写法`categorical: []`与 features 有何区别
+
+⏺ categorical: [] vs features 的区别
+
+features: 指定用于训练的特征列名列表
+- 控制哪些列作为输入特征
+- 防止数据泄漏（如排除ID、时间戳等）
+- 显式定义特征子集
+
+categorical: []: 指定哪些特征是分类特征
+- 空数组 [] = 无分类特征（所有特征视为数值）
+- auto = 自动检测object类型的列作为分类特征
+- 显式列表 ['col1', 'col2'] = 指定特定列为分类特征
+
+关键区别：
+- features 控制输入哪些列
+- categorical 控制如何处理这些列（数值 vs 分类）
+
+在你的配置中：
+- features 列出了13个输入特征列
+- categorical: auto 会自动将这些列中的object类型视为分类特征处理
+
+⏺ 对于12个类别、每类约1000条数据的情况：
+
+分类特征设置建议：
+
+1. 数量范围：3-8个分类特征较为合适
+2. 选择原则：
+  - 选择高基数（unique值多）的特征
+  - 选择与目标类别相关性强的特征
+  - 避免低基数（unique值少）的特征
+3. 具体配置：
+categorical:
+  - function           # 功能（通常高基数）
+  - instrument_type    # 仪器类型
+  - location           # 位置
+  - assembly_material  # 装配材料
+  - process            # 工艺
+
+4. 验证方法：训练后检查特征重要性，保留重要分类特征，移除不重要的。
+
+避免设置过多分类特征，否则可能导致过拟合或训练缓慢。
+
+> 详情解释下什么是高基数（unique值多）的特征
+
+⏺ 高基数特征解释
+
+高基数特征：指该特征包含大量不同的唯一值（unique values）
+
+示例对比：
+- 高基数：user_id（可能有数万个不同ID）、city（数百个城市）、product_sku（数千个SKU）
+- 低基数：gender（只有2-3个值）、boolean_flag（只有2个值）、status（3-5个状态）
+
+在你的数据中：
+- 可能的高基数特征：function、instrument_name、location（如果有很多不同值）
+- 可能的低基数特征：status、direction、assembly_phase（如果只有少数几个值）
+
+选择原则：优先选择高基数特征作为分类特征，因为CatBoost能更好地处理这类特征的分组和编码。
+
